--- a/Atividade02/q2/style.css
+++ b/Atividade02/q2/style.css
@@ -1,26 +1,52 @@
-.container {
-    display: grid;
-    grid-template-columns: 15% 70% 15%;
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+  }
+  
+  body {
+    background-color: #333;
+    display: flex;
+    justify-content: center;
     align-items: center;
-}
-
-.conteudo-esquerdo {
-    background-color: aqua;
-    padding: 2em 1em;
-    margin: 1em;
-}
-
-.conteudo-principal {
-    background-color: aquamarine;
-    padding: 1em;
-    margin: 1em;
-
-}
-
-.conteudo-direito {
-    background-color: lightblue;
-    padding: 2em 1em;
-    margin: 1em;
-
-}
+    height: 100vh;
+  }
+  
+  .perfil__lista {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 350px;
+  }
+  
+  .perfil {
+    display: flex;
+    align-items: center;
+    padding: 16px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .perfil:last-child {
+    border-bottom: none;
+  }
+  
+  .perfil img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-right: 16px;
+  }
+  
+  .perfil-info h3 {
+    font-size: 18px;
+    margin-bottom: 4px;
+    color: #333;
+  }
+  
+  .perfil-info p {
+    font-size: 14px;
+    color: #777;
+  }
+  
